# Meta-hackathon

./: .env.example  .gitignore  Context.txt  Dockerfile  README.md  app.spaces.yaml  inference.py  openenv.yaml  pyproject.toml  test_api.py  test_env.py
.github/workflows/: ci.yml
environment/: __init__.py  grader.py  models.py  retail_env.py  tasks.py
multi_channel_retail_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pipeline/: __init__.py  chain.py  config.py  ingest.py  retriever.py  router.py  safety.py
retail_inventory_env/: Context.txt  README.md  inference.py  openenv.yaml  pyproject.toml  test_env.py
retail_inventory_env/environment/: models.py  retail_env.py  tasks.py
retail_inventory_env/retail_inventory_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
retail_inventory_env/server/: Dockerfile  app.py
retail_inventory_env/tests/: test_api.py  test_grader.py  test_retail_env.py
scripts/: benchmark_inference.py  health_check.py  pre_submission_check.py  run_tests.py
server/: Dockerfile  __init__.py  app.py
server/ui/: dashboard.html  index.html
tests/: __init__.py  test_api_contract.py  test_compliance.py  test_environment.py
