[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-inventory-env"
version = "0.1.0"
description = "OpenEnv compliant retail inventory management environment"
authors = [{name = "YourTeamName"}]
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.8.0",
    "numpy>=1.21.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/retail-inventory-env"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.26.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
# If pytest fails with ValueError: option names {'--alluredir'} already added (global Allure plugins),
# run:  set PYTEST_DISABLE_PLUGIN_AUTOLOAD=1   (PowerShell) then pytest

[tool.setuptools.packages.find]
where = ["."]
