[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-channel-retail-env"
version = "0.3.0"
description = "OpenEnv compliant multi-channel retail with NVIDIA-inspired RAG pipeline"
authors = [{name = "OpenEnv Hackathon"}]
dependencies = [
    # ── Core server ──────────────────────────────────────────────
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "openai>=1.0.0",

    # ── RAG Pipeline ─────────────────────────────────────────────
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-huggingface>=0.1.0",
    "langchain-experimental>=0.3.0",
    "groq>=0.9.0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.0",

    # ── Document loading ─────────────────────────────────────────
    "pypdf>=3.0.0",
]

[project.scripts]
server = "server.app:main"
ingest = "pipeline.ingest:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
